agrego fotos, implemento ver todo

--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
   <body class="">
     <main>
       <section class="heroContainer">
-        <img
-          class="heroImagen"
-          alt="Playa"
-          src="/img/18.webp"
-        />
+        <img class="heroImagen" alt="Playa" src="/img/18.webp" />
         <div class="heroTituloContainer">
           <h1 class="heroTitulo anim" data-anim="animacionTituloHero">
             Marcos Núñez
@@ -234,132 +230,12 @@
                 alt="Complejo por la noche"
                 loading="lazy"
             /></a>
-            <a
-              href="/img/1.webp"
-              data-lightbox="image-1"
-              data-title="Complejo por la noche"
-            >
-              <img
-                class="ciudad foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/1.webp"
-                alt="Complejo por la noche"
-                loading="lazy"
-            /></a>
-            <a
-              href="/img/12.webp"
-              data-lightbox="image-1"
-              data-title="Rambla Montevideo"
-            >
-              <img
-                class="ciudad foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/12.webp"
-                alt="Rambla Montevideo"
-                loading="lazy"
-            /></a>
-            <a
-              href="/img/9.webp"
-              data-lightbox="image-1"
-              data-title="Plato de TarTar"
-            >
-              <img
-                class="comida foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/9.webp"
-                alt="Plato de TarTar"
-                loading="lazy"
-            /></a>
-            <a href="/img/14.webp" data-lightbox="image-1" data-title="Perro">
-              <img
-                class="naturaleza foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/14.webp"
-                alt="Perro"
-                loading="lazy"
-            /></a>
-            <a
-              href="/img/8.webp"
-              data-lightbox="image-1"
-              data-title="Plato de sushi"
-            >
-              <img
-                class="comida foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/8.webp"
-                alt="Plato de sushi"
-                loading="lazy"
-            /></a>
-            <!-- </div>
-          <div class="col"> -->
-            <a
-              href="/img/13.webp"
-              data-lightbox="image-1"
-              data-title="Flores rosadas"
-            >
-              <img
-                class="naturaleza foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/13.webp"
-                alt="Flores rosadas"
-                loading="lazy"
-            /></a>
-            <a
-              href="/img/11.webp"
-              data-lightbox="image-1"
-              data-title="Cantante, compositor y freestyler Luis Berrutti, también conocido como Morfeo"
-            >
+            <a href="/img/2.webp" data-lightbox="image-1" data-title="Festival">
               <img
                 class="gente foto anim global"
                 data-anim="animacionGaleria"
-                src="/img/11.webp"
-                alt="Cantante, compositor y freestyler Luis Berrutti, tambien conocido como Morfeo"
-                loading="lazy"
-            /></a>
-            <a
-              href="/img/7.webp"
-              data-lightbox="image-1"
-              data-title="Plato de sushi"
-            >
-              <img
-                class="comida foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/7.webp"
-                alt="Plato de sushi"
-                loading="lazy"
-            /></a>
-            <a href="/img/10.webp" data-lightbox="image-1" data-title="Ramen">
-              <img
-                class="comida foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/10.webp"
-                alt="Ramen"
-                loading="lazy"
-            /></a>
-            <a
-              href="/img/3.webp"
-              data-lightbox="image-1"
-              data-title="Estación de servicio"
-            >
-              <img
-                class="ciudad foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/3.webp"
-                alt="Estacion Axion"
-                loading="lazy"
-            /></a>
-            <!-- </div>
-          <div class="col"> -->
-            <a
-              href="/img/5.webp"
-              data-lightbox="image-1"
-              data-title="Paisaje mar"
-            >
-              <img
-                class="naturaleza foto anim global"
-                data-anim="animacionGaleria"
-                src="/img/5.webp"
-                alt="Paisaje mar"
+                src="/img/2.webp"
+                alt="Festival"
                 loading="lazy"
             /></a>
             <a
@@ -371,7 +247,23 @@
                 class="ciudad foto anim global"
                 data-anim="animacionGaleria"
                 src="/img/3.webp"
-                alt="Estacion Axion"
+                alt="Estacion de servicio"
+                loading="lazy"
+            /></a>
+            <a href="/img/4.webp" data-lightbox="image-1" data-title="18">
+              <img
+                class="ciudad foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/4.webp"
+                alt="18"
+                loading="lazy"
+            /></a>
+            <a href="/img/5.webp" data-lightbox="image-1" data-title="Playa">
+              <img
+                class="naturaleza foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/5.webp"
+                alt="Playa"
                 loading="lazy"
             /></a>
             <a
@@ -386,6 +278,74 @@
                 alt="Plato de sushi"
                 loading="lazy"
             /></a>
+            <!-- </div>
+          <div class="col"> -->
+            <a
+              href="/img/7.webp"
+              data-lightbox="image-1"
+              data-title="Plato de Sushi"
+            >
+              <img
+                class="comida foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/7.webp"
+                alt="Plato de Sushi"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/8.webp"
+              data-lightbox="image-1"
+              data-title="Plato de sushi"
+            >
+              <img
+                class="comida foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/8.webp"
+                alt="Plato de Sushi"
+                loading="lazy"
+            /></a>
+            <a href="/img/9.webp" data-lightbox="image-1" data-title="Tar Tar">
+              <img
+                class="comida foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/9.webp"
+                alt="Tar Tar"
+                loading="lazy"
+            /></a>
+            <a href="/img/10.webp" data-lightbox="image-1" data-title="Ramen">
+              <img
+                class="comida foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/10.webp"
+                alt="Ramen"
+                loading="lazy"
+            /></a>
+            <a href="/img/11.webp" data-lightbox="image-1" data-title="Rapero">
+              <img
+                class="gente foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/11.webp"
+                alt="Rapero"
+                loading="lazy"
+            /></a>
+            <!-- </div>
+          <div class="col"> -->
+            <a href="/img/12.webp" data-lightbox="image-1" data-title="Rambla">
+              <img
+                class="ciudad foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/12.webp"
+                alt="Rambla"
+                loading="lazy"
+            /></a>
+            <a href="/img/13.webp" data-lightbox="image-1" data-title="Flores">
+              <img
+                class="naturaleza foto anim global"
+                data-anim="animacionGaleria"
+                src="/img/13.webp"
+                alt="Flores"
+                loading="lazy"
+            /></a>
             <a href="/img/14.webp" data-lightbox="image-1" data-title="Perro">
               <img
                 class="naturaleza foto anim global"
@@ -394,12 +354,157 @@
                 alt="Perro"
                 loading="lazy"
             /></a>
-            <a href="/img/4.webp" data-lightbox="image-1" data-title="Avenida">
+            <a href="/img/15.webp" data-lightbox="image-1" data-title="Cerro">
               <img
-                class="ciudad foto anim global"
+                class="naturaleza foto anim global"
                 data-anim="animacionGaleria"
-                src="/img/4.webp"
-                alt="Avenida"
+                src="/img/15.webp"
+                alt="Cerro"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/16.webp"
+              data-lightbox="image-1"
+              data-title="Festival"
+            >
+              <img
+                class="gente foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/16.webp"
+                alt="Festival"
+                loading="lazy"
+            /></a>
+            
+            <a
+              href="/img/17.webp"
+              data-lightbox="image-1"
+              data-title="Festival"
+            >
+              <img
+                class="gente foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/17.webp"
+                alt="Festival"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/18.webp"
+              data-lightbox="image-1"
+              data-title="Playa"
+            >
+              <img
+                class="naturaleza foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/18.webp"
+                alt="Playa"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/19.webp"
+              data-lightbox="image-1"
+              data-title="Faro"
+            >
+              <img
+                class="naturaleza foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/19.webp"
+                alt="Faro"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/20.webp"
+              data-lightbox="image-1"
+              data-title="playa"
+            >
+              <img
+                class="naturaleza foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/20.webp"
+                alt="Playa"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/21.webp"
+              data-lightbox="image-1"
+              data-title="playa"
+            >
+              <img
+                class="naturaleza foto anim global oculto" 
+                data-anim="animacionGaleria"
+                src="/img/21.webp"
+                alt="playa"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/22.webp"
+              data-lightbox="image-1"
+              data-title="Puerto"
+            >
+              <img
+                class="naturaleza foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/22.webp"
+                alt="Puerto"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/23.webp"
+              data-lightbox="image-1"
+              data-title="Rambla"
+            >
+              <img
+                class="ciudad foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/23.webp"
+                alt="Rambla"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/24.webp"
+              data-lightbox="image-1"
+              data-title="Cerro"
+            >
+              <img
+                class="naturaleza foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/24.webp"
+                alt="Festival"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/25.webp"
+              data-lightbox="image-1"
+              data-title="playa"
+            >
+              <img
+                class="naturaleza foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/25.webp"
+                alt="playa"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/26.webp"
+              data-lightbox="image-1"
+              data-title="Edificio"
+            >
+              <img
+                class="ciudad foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/26.webp"
+                alt="Edificio"
+                loading="lazy"
+            /></a>
+            <a
+              href="/img/27.webp"
+              data-lightbox="image-1"
+              data-title="Edificio"
+            >
+              <img
+                class="ciudad foto anim global oculto"
+                data-anim="animacionGaleria"
+                src="/img/27.webp"
+                alt="Edificio"
                 loading="lazy"
             /></a>
 
@@ -415,8 +520,9 @@
             <video
               src="/video/Espacio 17a.mp4"
               class="videoclip anim"
-               data-anim="animacionGaleria"
+              data-anim="animacionGaleria"
               type="video/mp4"
+              loading="lazy"
               controls
               loop
             ></video>
@@ -424,17 +530,17 @@
               src="https://player.vimeo.com/video/1127202916?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
               frameborder="0"
               class="videoclip anim"
-               data-anim="animacionGaleria"
+              data-anim="animacionGaleria"
               allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
-             
+              loading="lazy"
               title="Espacio 17A PC - Final"
             ></iframe>
           </div>
         </section>
 
         <div class="botonContainer">
-          <button class="btnVerTodo">ver todo</button>
+          <button class="btnVerTodo" id="verTodo">ver todo</button>
         </div>
 
         <section
@@ -448,7 +554,7 @@
               data-anim="animacionFormulario"
               alt="fotoMarcos"
               id="fotoMarcos"
-              src="/img/fotoMarcos3.jpg"
+              src="/img/fotoMarcos3.webp"
             />
           </div>
 
