--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <a id="linkGaleria" href="#galeriaId"
             ><button class="btnContacto" id="btnGaleria">Galería</button></a
           >
-          <a id="linkContacto" href="#prueba"
+          <a id="linkContacto" href="#redesSocialesTexto"
             ><button class="btnContacto">Contacto</button></a
           >
           <a id="#linkVideoclips" href="#galeriaId">
