--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                 ><ul class="listaMenu">
                   <li class="iconosMenu" id="icoTodo">Todas</li>
                   <li class="iconosMenu" id="icoComida">Culinario</li>
+                   <li class="iconosMenu" id="icoPano">Panorámicas</li>
                   <li class="iconosMenu" id="icoGente">Personas</li>
                   <li class="iconosMenu" id="icoNaturaleza">Naturaleza</li>
                   <li class="iconosMenu" id="icoCiudad">Urbano</li>
@@ -368,7 +369,7 @@
               data-title="Festival"
             >
               <img
-                class="gente foto anim global oculto"
+                class="gente foto anim oculto"
                 data-anim="animacionGaleria"
                 src="/img/16.webp"
                 alt="Festival"
@@ -381,7 +382,7 @@
               data-title="Festival"
             >
               <img
-                class="gente foto anim global oculto"
+                class="gente foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/17.webp"
                 alt="Festival"
@@ -393,7 +394,7 @@
               data-title="Playa"
             >
               <img
-                class="naturaleza foto anim global oculto"
+                class="panoramica foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/18.webp"
                 alt="Playa"
@@ -405,7 +406,7 @@
               data-title="Faro"
             >
               <img
-                class="naturaleza foto anim global oculto"
+                class="naturaleza foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/19.webp"
                 alt="Faro"
@@ -417,7 +418,7 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim global oculto"
+                class="naturaleza foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/20.webp"
                 alt="Playa"
@@ -429,7 +430,7 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim global oculto" 
+                class="panoramica foto anim  oculto" 
                 data-anim="animacionGaleria"
                 src="/img/21.webp"
                 alt="playa"
@@ -441,7 +442,7 @@
               data-title="Puerto"
             >
               <img
-                class="naturaleza foto anim global oculto"
+                class="naturaleza foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/22.webp"
                 alt="Puerto"
@@ -453,7 +454,7 @@
               data-title="Rambla"
             >
               <img
-                class="ciudad foto anim global oculto"
+                class="ciudad foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/23.webp"
                 alt="Rambla"
@@ -465,7 +466,7 @@
               data-title="Cerro"
             >
               <img
-                class="naturaleza foto anim global oculto"
+                class="naturaleza foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/24.webp"
                 alt="Festival"
@@ -477,7 +478,7 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim global oculto"
+                class="naturaleza foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/25.webp"
                 alt="playa"
@@ -489,7 +490,7 @@
               data-title="Edificio"
             >
               <img
-                class="ciudad foto anim global oculto"
+                class="ciudad foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/26.webp"
                 alt="Edificio"
@@ -501,10 +502,22 @@
               data-title="Edificio"
             >
               <img
-                class="ciudad foto anim global oculto"
+                class="ciudad foto anim  oculto"
                 data-anim="animacionGaleria"
                 src="/img/27.webp"
                 alt="Edificio"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/Caravana_FA_-_Minas.webp"
+              data-lightbox="image-1"
+              data-title="Caravana FA"
+            >
+              <img
+                class="panoramica foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/Caravana_FA_-_Minas.webp"
+                alt="Caravana FA"
                 loading="lazy"
             /></a>
 
