--- a/index.html
+++ b/index.html
@@ -520,6 +520,150 @@
                 alt="Caravana FA"
                 loading="lazy"
             /></a>
+              <a
+              href="/img/28.webp"
+              data-lightbox="image-1"
+              data-title="Atardecer"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/28.webp"
+                alt="atardecer"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/29.webp"
+              data-lightbox="image-1"
+              data-title="Cabo polonio"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/29.webp"
+                alt="Cabo polonio"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/30.webp"
+              data-lightbox="image-1"
+              data-title="Mar"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/30.webp"
+                alt="Mar"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/31.webp"
+              data-lightbox="image-1"
+              data-title="Faro"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/31.webp"
+                alt="Faro"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/32.webp"
+              data-lightbox="image-1"
+              data-title="Faro"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/32.webp"
+                alt="faro"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/33.webp"
+              data-lightbox="image-1"
+              data-title="Playa"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/33.webp"
+                alt="playa"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/34.webp"
+              data-lightbox="image-1"
+              data-title="Playa"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/34.webp"
+                alt="playa"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/35.webp"
+              data-lightbox="image-1"
+              data-title="playa"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/35.webp"
+                alt="Playa"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/36.webp"
+              data-lightbox="image-1"
+              data-title="faro"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/36.webp"
+                alt="faro"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/37.webp"
+              data-lightbox="image-1"
+              data-title="faro"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/37.webp"
+                alt="faro"
+                loading="lazy"
+            /></a>
+              <a
+              href="/img/38.webp"
+              data-lightbox="image-1"
+              data-title="pajaro"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/38.webp"
+                alt="pajaro"
+                loading="lazy"
+            /></a>
+                  <a
+              href="/img/39.webp"
+              data-lightbox="image-1"
+              data-title="arbol"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/39.webp"
+                alt="arbol"
+                loading="lazy"
+            /></a>
 
             <iframe
               src="https://player.vimeo.com/video/1126030583?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
