fix column media query

--- a/index.html
+++ b/index.html
@@ -664,6 +664,78 @@
                 alt="arbol"
                 loading="lazy"
             /></a>
+                   <a
+              href="/img/40.webp"
+              data-lightbox="image-1"
+              data-title="playa"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/40.webp"
+                alt="playa"
+                loading="lazy"
+            /></a>
+                   <a
+              href="/img/41.webp"
+              data-lightbox="image-1"
+              data-title="cerro"
+            >
+              <img
+                class="panoramica foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/41.webp"
+                alt="cerro"
+                loading="lazy"
+            /></a>
+                   <a
+              href="/img/43.webp"
+              data-lightbox="image-1"
+              data-title="sauna"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/43.webp"
+                alt="sauna"
+                loading="lazy"
+            /></a>
+                   <a
+              href="/img/44.webp"
+              data-lightbox="image-1"
+              data-title="sauna"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/44.webp"
+                alt="sauna"
+                loading="lazy"
+            /></a>
+                   <a
+              href="/img/45.webp"
+              data-lightbox="image-1"
+              data-title="playa"
+            >
+              <img
+                class="naturaleza foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/45.webp"
+                alt="playa"
+                loading="lazy"
+            /></a>
+                   <a
+              href="/img/46.webp"
+              data-lightbox="image-1"
+              data-title="cerro"
+            >
+              <img
+                class="panoramica foto anim  oculto"
+                data-anim="animacionGaleria"
+                src="/img/46.webp"
+                alt="cerro"
+                loading="lazy"
+            /></a>
 
             <iframe
               src="https://player.vimeo.com/video/1126030583?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
