optimizo imagenes quitando lazy en img ocultas

--- a/index.html
+++ b/index.html
@@ -368,12 +368,13 @@
               data-lightbox="image-1"
               data-title="Festival"
             >
-              <img
+            <!-- fdo;lishshfshildfhliufijsdf  -->
+            <img
                 class="gente foto anim oculto"
                 data-anim="animacionGaleria"
                 src="/img/16.webp"
                 alt="Festival"
-                loading="lazy"
+                loading=""
             /></a>
             
             <a
@@ -386,7 +387,7 @@
                 data-anim="animacionGaleria"
                 src="/img/17.webp"
                 alt="Festival"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/18.webp"
@@ -398,7 +399,7 @@
                 data-anim="animacionGaleria"
                 src="/img/18.webp"
                 alt="Playa"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/19.webp"
@@ -410,7 +411,7 @@
                 data-anim="animacionGaleria"
                 src="/img/19.webp"
                 alt="Faro"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/20.webp"
@@ -422,7 +423,7 @@
                 data-anim="animacionGaleria"
                 src="/img/20.webp"
                 alt="Playa"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/21.webp"
@@ -434,7 +435,7 @@
                 data-anim="animacionGaleria"
                 src="/img/21.webp"
                 alt="playa"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/22.webp"
@@ -446,7 +447,7 @@
                 data-anim="animacionGaleria"
                 src="/img/22.webp"
                 alt="Puerto"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/23.webp"
@@ -458,7 +459,7 @@
                 data-anim="animacionGaleria"
                 src="/img/23.webp"
                 alt="Rambla"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/24.webp"
@@ -470,7 +471,7 @@
                 data-anim="animacionGaleria"
                 src="/img/24.webp"
                 alt="Festival"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/25.webp"
@@ -482,7 +483,7 @@
                 data-anim="animacionGaleria"
                 src="/img/25.webp"
                 alt="playa"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/26.webp"
@@ -494,7 +495,7 @@
                 data-anim="animacionGaleria"
                 src="/img/26.webp"
                 alt="Edificio"
-                loading="lazy"
+                loading=""
             /></a>
             <a
               href="/img/27.webp"
@@ -506,7 +507,7 @@
                 data-anim="animacionGaleria"
                 src="/img/27.webp"
                 alt="Edificio"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/Caravana_FA_-_Minas.webp"
@@ -518,7 +519,7 @@
                 data-anim="animacionGaleria"
                 src="/img/Caravana_FA_-_Minas.webp"
                 alt="Caravana FA"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/28.webp"
@@ -530,7 +531,7 @@
                 data-anim="animacionGaleria"
                 src="/img/28.webp"
                 alt="atardecer"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/29.webp"
@@ -542,7 +543,7 @@
                 data-anim="animacionGaleria"
                 src="/img/29.webp"
                 alt="Cabo polonio"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/30.webp"
@@ -554,7 +555,7 @@
                 data-anim="animacionGaleria"
                 src="/img/30.webp"
                 alt="Mar"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/31.webp"
@@ -566,7 +567,7 @@
                 data-anim="animacionGaleria"
                 src="/img/31.webp"
                 alt="Faro"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/32.webp"
@@ -578,7 +579,7 @@
                 data-anim="animacionGaleria"
                 src="/img/32.webp"
                 alt="faro"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/33.webp"
@@ -590,7 +591,7 @@
                 data-anim="animacionGaleria"
                 src="/img/33.webp"
                 alt="playa"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/34.webp"
@@ -602,7 +603,7 @@
                 data-anim="animacionGaleria"
                 src="/img/34.webp"
                 alt="playa"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/35.webp"
@@ -614,7 +615,7 @@
                 data-anim="animacionGaleria"
                 src="/img/35.webp"
                 alt="Playa"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/36.webp"
@@ -626,7 +627,7 @@
                 data-anim="animacionGaleria"
                 src="/img/36.webp"
                 alt="faro"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/37.webp"
@@ -638,7 +639,7 @@
                 data-anim="animacionGaleria"
                 src="/img/37.webp"
                 alt="faro"
-                loading="lazy"
+                loading=""
             /></a>
               <a
               href="/img/38.webp"
@@ -650,7 +651,7 @@
                 data-anim="animacionGaleria"
                 src="/img/38.webp"
                 alt="pajaro"
-                loading="lazy"
+                loading=""
             /></a>
                   <a
               href="/img/39.webp"
@@ -662,7 +663,7 @@
                 data-anim="animacionGaleria"
                 src="/img/39.webp"
                 alt="arbol"
-                loading="lazy"
+                loading=""
             /></a>
                    <a
               href="/img/40.webp"
@@ -674,7 +675,7 @@
                 data-anim="animacionGaleria"
                 src="/img/40.webp"
                 alt="playa"
-                loading="lazy"
+                loading=""
             /></a>
                    <a
               href="/img/41.webp"
@@ -686,7 +687,7 @@
                 data-anim="animacionGaleria"
                 src="/img/41.webp"
                 alt="cerro"
-                loading="lazy"
+                loading=""
             /></a>
                    <a
               href="/img/43.webp"
@@ -698,7 +699,7 @@
                 data-anim="animacionGaleria"
                 src="/img/43.webp"
                 alt="sauna"
-                loading="lazy"
+                loading=""
             /></a>
                    <a
               href="/img/44.webp"
@@ -710,7 +711,7 @@
                 data-anim="animacionGaleria"
                 src="/img/44.webp"
                 alt="sauna"
-                loading="lazy"
+                loading=""
             /></a>
                    <a
               href="/img/45.webp"
@@ -722,7 +723,7 @@
                 data-anim="animacionGaleria"
                 src="/img/45.webp"
                 alt="playa"
-                loading="lazy"
+                loading=""
             /></a>
                    <a
               href="/img/46.webp"
@@ -734,7 +735,7 @@
                 data-anim="animacionGaleria"
                 src="/img/46.webp"
                 alt="cerro"
-                loading="lazy"
+                loading=""
             /></a>
 
             <iframe
