--- a/index.html
+++ b/index.html
@@ -370,11 +370,11 @@
             >
             <!-- fdo;lishshfshildfhliufijsdf  -->
             <img
-                class="gente foto anim oculto"
+                class="gente foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/16.webp"
                 alt="Festival"
-                loading=""
+                loading="lazy"
             /></a>
             
             <a
@@ -383,11 +383,11 @@
               data-title="Festival"
             >
               <img
-                class="gente foto anim  oculto"
+                class="gente foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/17.webp"
                 alt="Festival"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/18.webp"
@@ -395,11 +395,11 @@
               data-title="Playa"
             >
               <img
-                class="panoramica foto anim  oculto"
+                class="panoramica foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/18.webp"
                 alt="Playa"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/19.webp"
@@ -407,11 +407,11 @@
               data-title="Faro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/19.webp"
                 alt="Faro"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/20.webp"
@@ -419,11 +419,11 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/20.webp"
                 alt="Playa"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/21.webp"
@@ -431,11 +431,11 @@
               data-title="playa"
             >
               <img
-                class="panoramica foto anim  oculto" 
+                class="panoramica foto  oculto" 
                 data-anim="animacionGaleria"
                 src="/img/21.webp"
                 alt="playa"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/22.webp"
@@ -443,11 +443,11 @@
               data-title="Puerto"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/22.webp"
                 alt="Puerto"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/23.webp"
@@ -455,11 +455,11 @@
               data-title="Rambla"
             >
               <img
-                class="ciudad foto anim  oculto"
+                class="ciudad foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/23.webp"
                 alt="Rambla"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/24.webp"
@@ -467,11 +467,11 @@
               data-title="Cerro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/24.webp"
                 alt="Festival"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/25.webp"
@@ -479,11 +479,11 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/25.webp"
                 alt="playa"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/26.webp"
@@ -491,11 +491,11 @@
               data-title="Edificio"
             >
               <img
-                class="ciudad foto anim  oculto"
+                class="ciudad foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/26.webp"
                 alt="Edificio"
-                loading=""
+                loading="lazy"
             /></a>
             <a
               href="/img/27.webp"
@@ -503,11 +503,11 @@
               data-title="Edificio"
             >
               <img
-                class="ciudad foto anim  oculto"
+                class="ciudad foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/27.webp"
                 alt="Edificio"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/Caravana_FA_-_Minas.webp"
@@ -515,11 +515,11 @@
               data-title="Caravana FA"
             >
               <img
-                class="panoramica foto anim  oculto"
+                class="panoramica foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/Caravana_FA_-_Minas.webp"
                 alt="Caravana FA"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/28.webp"
@@ -527,11 +527,11 @@
               data-title="Atardecer"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/28.webp"
                 alt="atardecer"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/29.webp"
@@ -539,11 +539,11 @@
               data-title="Cabo polonio"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/29.webp"
                 alt="Cabo polonio"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/30.webp"
@@ -551,11 +551,11 @@
               data-title="Mar"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/30.webp"
                 alt="Mar"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/31.webp"
@@ -563,11 +563,11 @@
               data-title="Faro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/31.webp"
                 alt="Faro"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/32.webp"
@@ -575,11 +575,11 @@
               data-title="Faro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/32.webp"
                 alt="faro"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/33.webp"
@@ -587,11 +587,11 @@
               data-title="Playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/33.webp"
                 alt="playa"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/34.webp"
@@ -599,11 +599,11 @@
               data-title="Playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/34.webp"
                 alt="playa"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/35.webp"
@@ -611,11 +611,11 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/35.webp"
                 alt="Playa"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/36.webp"
@@ -623,11 +623,11 @@
               data-title="faro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/36.webp"
                 alt="faro"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/37.webp"
@@ -635,11 +635,11 @@
               data-title="faro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/37.webp"
                 alt="faro"
-                loading=""
+                loading="lazy"
             /></a>
               <a
               href="/img/38.webp"
@@ -647,11 +647,11 @@
               data-title="pajaro"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/38.webp"
                 alt="pajaro"
-                loading=""
+                loading="lazy"
             /></a>
                   <a
               href="/img/39.webp"
@@ -659,11 +659,11 @@
               data-title="arbol"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/39.webp"
                 alt="arbol"
-                loading=""
+                loading="lazy"
             /></a>
                    <a
               href="/img/40.webp"
@@ -671,11 +671,11 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/40.webp"
                 alt="playa"
-                loading=""
+                loading="lazy"
             /></a>
                    <a
               href="/img/41.webp"
@@ -683,11 +683,11 @@
               data-title="cerro"
             >
               <img
-                class="panoramica foto anim  oculto"
+                class="panoramica foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/41.webp"
                 alt="cerro"
-                loading=""
+                loading="lazy"
             /></a>
                    <a
               href="/img/43.webp"
@@ -695,11 +695,11 @@
               data-title="sauna"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/43.webp"
                 alt="sauna"
-                loading=""
+                loading="lazy"
             /></a>
                    <a
               href="/img/44.webp"
@@ -707,11 +707,11 @@
               data-title="sauna"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto oculto"
                 data-anim="animacionGaleria"
                 src="/img/44.webp"
                 alt="sauna"
-                loading=""
+                loading="lazy"
             /></a>
                    <a
               href="/img/45.webp"
@@ -719,11 +719,11 @@
               data-title="playa"
             >
               <img
-                class="naturaleza foto anim  oculto"
+                class="naturaleza foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/45.webp"
                 alt="playa"
-                loading=""
+                loading="lazy"
             /></a>
                    <a
               href="/img/46.webp"
@@ -731,11 +731,11 @@
               data-title="cerro"
             >
               <img
-                class="panoramica foto anim  oculto"
+                class="panoramica foto  oculto"
                 data-anim="animacionGaleria"
                 src="/img/46.webp"
                 alt="cerro"
-                loading=""
+                loading="lazy"
             /></a>
 
             <iframe
